# BENJEN

./: .gitignore  CMakeLists.txt  README.md
Benjen/src/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexBuffer.h
Benjen/src/core/: Application.cpp  Application.h  Window.cpp  Window.h  main.cpp  main.cpp.bak
Sandbox/: test_app.cpp
core/src/: Application.cpp  Application.h  Log.h  Window.cpp  Window.h  main.cpp
core/src/Renderer/: Shader.cpp  Shader.h
include/glad/: glad.h
res/shaders/: BasicFragmentShader.glsl  BasicVertexShader.glsl  fragment.frag  fragment.glsl  vertex.glsl
src/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  glad.c  main.cpp
src/Input/: Input.cpp  Input.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Renderer/Types/: RenderTypes.cpp  RenderTypes.hpp
src/Scene/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
